syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.schoolsservicegrpc.grpc";

service SchoolService{
  rpc getOneByID(SchoolId) returns (SchoolObject){}
  rpc getAll(Empty) returns (SchoolsList){}
}

message SchoolId{
  int64 id = 1;
}

message SchoolObject{
  int64 id = 1;
  string name = 2;
  string location = 3;
  int32 status = 4;
}

message Empty{

}

message SchoolsList{
  repeated SchoolObject school = 1;
}